apps/base/vaultwarden/10-ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: vaultwarden
spec:
  redirectScheme:
    scheme: https
    permanent: true
