apps/base/vaultwarden/05-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden.tommahs.nl`)
      priority: 10
      services:
        - kind: Service
          name: vaultwarden-service
          namespace: vaultwarden
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: vaultwarden-tls
